--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,5 +20,9 @@
 
         {{{body}}}
     </main>
+
+     {{#if loggedIn}}
+    <script src="../../public/logout.js"></script>
+    {{/if}}
 </body>
 </html>
